# qiskit_qcware

./: .gitignore  Pipfile  README.rst  mypy.ini  notes.org  pyproject.toml  tasks.py
.circleci/: config.yml
doc/source/: caveats.rst  conf.py  example.rst  index.rst
notebooks/: basic_demo.ipynb
qiskit_qcware/: __init__.py  conversions.py  qcware_backend.py  qcware_job.py  qcware_provider.py
tests/: test_circuits.py  test_misc.py  test_statevector.py  test_stub.py
tests/performance/: qiskit_profile.py
tests/strategies/qiskit/: __init__.py
